--- a/index.html
+++ b/index.html
@@ -1,11 +1,193 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document1</title>
+    <title>Mini Mario Platform</title>
+
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: linear-gradient(#5c94fc, #87ceeb);
+        }
+
+        /* Terreno */
+        .ground {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 120px;
+            background: #8B4513;
+        }
+
+        /* Mario */
+        #mario {
+            position: absolute;
+            width: 40px;
+            height: 60px;
+            background: red;
+            border-radius: 8px;
+        }
+
+        /* Tubi */
+        .pipe {
+            position: absolute;
+            width: 80px;
+            height: 120px;
+            background: green;
+            bottom: 120px;
+        }
+
+        .pipe::before {
+            content: "";
+            position: absolute;
+            top: -20px;
+            left: -10px;
+            width: 100px;
+            height: 30px;
+            background: darkgreen;
+        }
+
+        #pipe1 {
+            left: 300px;
+        }
+
+        #pipe2 {
+            left: 500px;
+        }
+
+        #pipe3 {
+            left: 700px;
+        }
+
+        #pipe4 {
+            left: 900px;
+        }
+
+        /* Modale */
+        .modal {
+            display: none;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: white;
+            top: 0;
+            left: 0;
+            z-index: 10;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        button {
+            padding: 15px 30px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <div id="mario"></div>
+
+    <div class="pipe" id="pipe1"></div>
+    <div class="pipe" id="pipe2"></div>
+    <div class="pipe" id="pipe3"></div>
+    <div class="pipe" id="pipe4"></div>
+
+    <div class="ground"></div>
+
+    <div class="modal" id="modal">
+        <h1>Sei entrato nel tubo!</h1>
+        <button onclick="exitPipe()">ESCI</button>
+    </div>
+
+    <script>
+        const mario = document.getElementById("mario");
+        const pipes = document.querySelectorAll(".pipe");
+        const modal = document.getElementById("modal");
+
+        let x = 50;
+        let y = 0;
+        let velocityY = 0;
+        let isJumping = false;
+
+        const gravity = 0.8;
+        const jumpPower = -15;
+        const speed = 5;
+        const groundHeight = 120;
+
+        let keys = {};
+
+        document.addEventListener("keydown", e => {
+            keys[e.key] = true;
+        });
+
+        document.addEventListener("keyup", e => {
+            keys[e.key] = false;
+        });
+
+        function gameLoop() {
+
+            if (modal.style.display !== "flex") {
+
+                // Movimento continuo
+                if (keys["ArrowRight"]) x += speed;
+                if (keys["ArrowLeft"]) x -= speed;
+
+                // Salto
+                if (keys["ArrowUp"] && !isJumping) {
+                    velocityY = jumpPower;
+                    isJumping = true;
+                }
+
+                // Gravità
+                velocityY += gravity;
+                y += velocityY;
+
+                if (y > 0) {
+                    y = 0;
+                    velocityY = 0;
+                    isJumping = false;
+                }
+
+                // Entrata tubo
+                if (keys["ArrowDown"]) {
+                    pipes.forEach(pipe => {
+                        const pipeRect = pipe.getBoundingClientRect();
+                        const marioRect = mario.getBoundingClientRect();
+
+                        if (
+                            marioRect.right > pipeRect.left &&
+                            marioRect.left < pipeRect.right &&
+                            !isJumping
+                        ) {
+                            enterPipe();
+                        }
+                    });
+                }
+
+                mario.style.left = x + "px";
+                mario.style.bottom = (groundHeight + y) + "px";
+            }
+
+            requestAnimationFrame(gameLoop);
+        }
+
+        function enterPipe() {
+            modal.style.display = "flex";
+        }
+
+        function exitPipe() {
+            modal.style.display = "none";
+        }
+
+        gameLoop();
+    </script>
+
 </body>
+
 </html>
