--- a/lucky.html
+++ b/lucky.html
@@ -334,7 +334,7 @@
     <nav>
         <div class="logo">
             <div class="logo-icon"></div>
-            <span>Sostenibilità 10</span>
+            <span>Competenza 10</span>
         </div>
         <div class="life-bar-wrapper">
             <span class="pixel-font life-label">PROGRESSO</span>
@@ -345,9 +345,9 @@
     </nav>
 
     <header class="hero">
-        <div class="level-badge pixel-font">LIVELLO 10: CIVIC COMPETENCE</div>
-        <h1>Futuro Sostenibile</h1>
-        <p class="hero-desc">Benvenuto nella missione per il pianeta. Esplora le strategie per una vita consapevole e guadagna punti competenza.</p>
+        <div class="level-badge pixel-font">LIVELLO 10: COMPETENZA EDUCAZIONE CIVICA</div>
+        <h1>Navigazione Consapevole</h1>
+        <p class="hero-desc">Benvenuto nella tua missione digitale. Impara a padroneggiare le regole della rete per diventare un cittadino del futuro critico, sicuro e responsabile.</p>
         
         <div class="illustration-area">
             <div class="turbine-pipe">
@@ -391,9 +391,9 @@
             <div class="question-mark pixel-font">?</div>
             <div class="card-tag">Materiali</div>
             <h2>Economia Circolare</h2>
-            <p>Passare dal modello estrai-produci-getta a un sistema rigenerativo. Ripara, riusa e ricicla per eliminare il concetto di rifiuto alla radice.</p>
+            <p>Hai lasciato delle sfide in sospeso nel modulo precedente. Torna indietro per completare il tuo percorso nel mondo di Super Mario e consolidare le tue basi.</p>
             <div class="card-footer">
-                <button class="btn-card">Esplora</button>
+                <button class="btn-card">Torna a giocare</button>
             </div>
         </div>
 
