--- a/tubo.html
+++ b/tubo.html
@@ -424,6 +424,7 @@
             <p>La sostenibilità non è solo ambiente. È giustizia, parità di genere e diritti per tutti. Nessuno deve essere lasciato indietro nella sfida globale.</p>
             <div class="card-footer">
                 <button class="btn-card">Unisciti</button>
+                <img src="download.jpg" alt="">
             </div>
         </div>
 
